# ADHDFocus

./: .replit  Pasted-1-Overall-Design-Theme-3D-Elements-Incorporate-subtle-3D-elements-into-buttons-cards-and-icons--1726690764290.txt  Pasted-Color-Scheme-Contrast-Add-Accents-The-design-is-clean-but-a-bit-too-minimalistic-You-can-introd-1726690052590.txt  Pasted-Error-fetching-user-progress-TypeError-message-Cannot-set-properties-of-null-setting-text-1726626443816.txt  Pasted-Feedback-on-Current-Design-Overall-Layout-The-current-layout-seems-functional-but-lacks-visual-hi-1726625149822.txt  Pasted-Navigation-Bar-Make-it-more-engaging-Add-icons-next-to-the-section-names-to-give-it-more-visual-app-1726625644208.txt  Pasted-To-make-these-designs-truly-stand-out-as-part-of-a-startup-product-here-s-a-creative-eye-catching--1726679765510.txt  Pasted-Updating-dashboard-with-data-Object-achievements-Array-3-focus-minutes-0-habits-completed--1726687624977.txt  README.md  config.py  main.py  package-lock.json  package.json  pasted_text_1726611681274.txt  pasted_text_1726612349062.txt  pasted_text_1726613289854.txt  pasted_text_1726613980849.txt  pasted_text_1726618805031.txt  pasted_text_1726619030825.txt  pasted_text_1726619867298.txt  pasted_text_1726620207123.txt  pasted_text_1726624550992.txt  pyproject.toml
app/: __init__.py  models.py
app/routes/: auth.py  dashboard.py  focus.py  forums.py  gamification.py  habits.py  insights.py  integrations.py  mood.py  resources.py  tasks.py
app/static/: index.html
app/templates/: base.html  focus.html  habits.html  index.html  (+5 more)
(+19 files in other folders)
