[tool.poetry]
name = "repl-nix-projectbuilder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"
psycopg2-binary = "^2.9.9"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.146.0"
todoist-api-python = "^2.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
